# grpc_solution

./: .gitattributes  .gitignore  COMPLETE_SOLUTION_INDEX.md  QUICK_REFERENCE.md  README.md  RHEL8_AIRGAP_GUIDE.md  WINDOWS11_AIRGAP_GUIDE.md  build_grpc_rhel8.sh  build_grpc_windows11.ps1  create_complete_airgap_bundle.sh  grpc_install_instructions_working_windows.txt
linux/: .gitignore  README.md
linux/artifacts/: SHA256SUMS  grpc-v1.76.0-source-with-submodules.tar.xz.partaa  grpc-v1.76.0-source-with-submodules.tar.xz.partab  join-large-files.sh  offline-bundle-v1.76.0.tar.xz.partaa  offline-bundle-v1.76.0.tar.xz.partab
linux/artifacts/examples/template-cpp/: CMakeLists.txt  README.md
linux/artifacts/examples/template-cpp/proto/: helloworld.proto
linux/artifacts/examples/template-cpp/src/: client.cc  server.cc
linux/scripts/: 01_fetch_grpc.sh  02_build_grpc.sh  03_package_offline_bundle.sh  04_env_helpers.sh  05_make_template_cpp.sh  06_smoketest_pkgconfig.sh
new-bundle/gprc-airgap-solution/: README.md  build_rhel8.sh  build_windows.ps1  demo_run.ps1  fix_absl_library_command_rebuild.md  requirements.txt
new-bundle/gprc-airgap-solution/grpc_demo/cpp/: CMakeLists.txt
new-bundle/gprc-airgap-solution/grpc_demo/cpp/src/: main.cpp
new-bundle/gprc-airgap-solution/grpc_demo/csharp/CalculatorClient/: CalculatorClient.cs  CalculatorClient.csproj  Program.cs  nuget.config
new-bundle/gprc-airgap-solution/grpc_demo/proto/: calculator.proto
new-bundle/gprc-airgap-solution/grpc_demo/python/: README.md  calculator_pb2.py  calculator_pb2_grpc.py  client.py  server.py
new-bundle/gprc-airgap-solution/grpc_demo/python-wheels/: grpcio_tools-1.76.0-cp314-cp314-win_amd64.whl
non-working-bundle/: MASTER_AIRGAP_GUIDE.md  WINDOWS_QUICK_FIX.md  build_grpc_rhel8.sh  create_complete_airgap_bundle.sh
